# bangme

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a21_cPython_import.py  cmake_install.cmake  device_gpio.c  hellorasberry  hellorasberry.c  interrupt.c  limit.c  makefile  oddeven.c  triangle.c  프로젝트_기술서 양식.hwp
a1/: CMakeLists.txt  Makefile  README.md  celsius2fahr.c  charNumber  charNumber.c  compare  compare.c  compare2.c  fahr2celsius.c  fourBit.c  fourBit2  fourBit2.c  genderRatio  genderRatio.c  infinit.c  limit  makefile  oddeven  oddeven.c  sizeof.c
a2/: CMakeLists.txt  Makefile  absolute  absolute.c  ascii  ascii.c  ascii2  ascii2.c  baseball.c  bigLetter  bigLetter.c  bigLetter2  bigLetter2.c  dice  dice.c  findMax  findMax.c  findValueinArray.c  grade  grade.c  grade2  grade2.c  leafYear  makefile  multiplyTable.c  one2Ten.c  one2TenDoWhile.c  one2TenWhile.c  one2Tensum  one2Tensum.c  passFail  passFail.c  posZeroNeg  posZeroNeg.c  posZeroNeg2  posZeroNeg2.c  posZeroNeg3  posZeroNeg3.c  power.c  proScore  (+9 more)
a3/: CMakeCache.txt  CMakeLists.txt  Makefile  arrayAssignement  arrayAssignement.c  arrayCompare  arrayCompare.c  arrayPointer.c  bubble.c  charAdress.c  charPointerOperation.c  cmake_install.cmake  dynamicAllocation  dynamicAllocation.c  endian.c  enumExample.c  fflushEx  fflushEx.c  fileDescription  fileDescription.c  filePointer.c  functionPointer.c  getSeries  getSeries.c  helloStr.c  makefile  pointer2.c  pointerConcept  pointerConcept.c  putSeries  putSeries.c  qsort.c  selection.c  strcatExample  strcatExample.c  sumArrayFunction  sumArrayFunction.c  sumMatrixFunction.c  sumMatrixFunction2.c  swapFunction.c  (+3 more)
a3/CarSerial/: CMakeLists.txt  Makefile  main.c  makefile  serial.c
a3/date/: CMakeLists.txt  Makefile  date.c  date.h  main.c  makefile
a3/myRandom/: CMakeLists.txt  Makefile  main.c  makefile  myRandom.c  myRandom.h
a3/string/: CMakeLists.txt  Makefile  main.c  makefile  string.c  string.h
atmega128/: buzzer.c  dcmortor.c  dcmortor2.c  dcmortorlcd.c  fndtimer.c  lcdat25160.c  lcdat25160OnOff.c  lcdswitchled.c  led+-.c  led3.c  ledmoving.c  ledmoving2.c  ledswitchmoving.c  numbercount.c  numberstop.c  outswitchlcd2.c  outswitchlcd3.c  switchled1.c  temphumi.c  timer.c  timer2led.c  timerled.c  uart.c  uart0main.c  uart0main2.c  uart0main3.c
balling/: balling  balling.c  balling.h  bowling_game  createDBTable.sql  main.c  makefile
docker_test/: compose.yml
ds/list/: list.c
ds/list3/: main.c
ds/list4/: list.c
ds/queue3/: main.c  testQueue
ds/queue4/: testQueue
ds/queue5/: queue.h  testQueue
ds/stack/: stack.c  (+1 more)
ml_dl_python/: a01_iupyter.ipynb  a03_numpy.ipynb
network/: hello_clinet.c  mq_client.c  shm_client  shm_client.c  shm_server.c  shm_sever  shm_test.c
opencv_docker/: Dockerfile  historoy_temp.txt
opencv_test/: export_yolo_to_onnx.py  yolo_face_detection.cpp
project/: Makefile  cmake_install.cmake
python/: a01.py  a05_type.py  a06_flame.py  a07_locals_vars.py  a09_operator.py  conda.txt  pythoninterpreter
rasp/: driverexamnative  driverexamnative.c  hardtonbuzzer  i2crgbled  i2cservo  i2cservo.c  leddrivernative  leddrivernative.c  ledpwm  ledpwm.c  ledswitchdrivernative  ledswitchdrivernative.c  makefile  switch  switch.c  switchdrivernative.c  switchi2crgbled  tonbuzzer  tonbuzzer.c
smartpoint/: CMakeLists.txt  ex10_moveVector.cpp  ex11_moveClass.cpp  ex12_vriantOptional  ex13_thread.cpp  ex14_anyncFuture.cpp  ex15_multyThreadTask.cpp  ex1_unique_point.cpp  ex3_deleter.cpp  ex5_memoryleak.cpp  ex6_weakedPtr.cpp  ex7_vectorSmart.cpp  ex8_treeSmart.cpp  ex9_forward.cpp
sqlQurry/: CMakeCache.txt  CMakeLists.txt  Makefile  bookSql  bookSql.c  createDbTable.sql
sqlQurry/include/: bookSql.h
sqlQurry/src/: bookSql.c  main.c
src/: main.c
stl/: CMakeLists.txt  ex10_forClass.cpp  ex11_Nullptr.cpp  ex12_constexprestion.cpp  ex13_array.cpp  ex15_unordered_map.cpp  ex17_sort_fstream.cpp  ex17_sort_fstream2.cpp  ex18_excution  ex18_excution.cpp  ex1_vector.cpp  ex2_string_vector.cpp  ex3_longest.cpp  ex4_string.cpp  ex5_string_find.cpp  ex6_iterator.cpp  ex7_map.cpp  ex8_vector_list.cpp  ex8_vector_list2.cpp  student_example.cpp
uart/: uart.c
(+189 files in other folders)
