cmake_minimum_required(VERSION 3.10)
project(MainProject)

# add_subdirectory(sqlQurry)s
# add_subdirectory(a1)
# add_subdirectory(a2)
# add_subdirectory(a3)
# add_subdirectory(project)
# add_subdirectory(stl)
# add_subdirectory(smartpoint)
# add_subdirectory(network/ipc)
# add_subdirectory(network/tcp_udp)
# add_subdirectory(network/util)
# add_subdirectory(network/multiProcess)
add_subdirectory(opencv/part1)
add_subdirectory(opencv/part2)